--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,25 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+
+# Environment files
+.env
+*.env
+
+# Logs
+logs/
+*.log
+
+# Data files (except sample structure)
+data/raw/*.csv
+data/raw/*.json
+
+# Python cache
+__pycache__/
+*.pyc
+
+# IDE
+.vscode/
+.idea/
+
