Document environment variables for secure configuration

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,14 @@
+# PostgreSQL database host
 POSTGRES_HOST=localhost
+
+# PostgreSQL port
 POSTGRES_PORT=5432
+
+# Database name
 POSTGRES_DB=ecommerce_db
+
+# Database user
 POSTGRES_USER=postgres
+
+# Database password
 POSTGRES_PASSWORD=postgres
