--- a/requirements.txt
+++ b/requirements.txt
@@ -13,12 +13,12 @@ sqlalchemy==2.0.30
 # Data Generation
 faker==25.8.0
 
-# Orchestration
-apache-airflow==2.9.1
-
 # Testing
 pytest==8.2.2
 pytest-cov==5.0.0
 
-# Logging & Utilities
+# Logging
 loguru==0.7.2
+
+
+faker==25.2.0
