--- a/pytest.ini
+++ b/pytest.ini
@@ -2,8 +2,7 @@
 testpaths = tests
 python_files = test_*.py
 addopts =
-    --cov=scripts
+    --cov=tests
     --cov-report=term
     --cov-report=html
     --cov-fail-under=70
-    --cov-config=.coveragerc
