--- a/pytest.ini
+++ b/pytest.ini
@@ -1,8 +1,4 @@
 [pytest]
 testpaths = tests
 python_files = test_*.py
-addopts =
-    --cov=tests
-    --cov-report=term
-    --cov-report=html
-    --cov-fail-under=70
+addopts = --cov=scripts --cov-report=term --cov-fail-under=70
